--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
   <script src="/assets/js/slick.min.js"></script>
 </head>
 
+<style>
+  .header_logo{
+    border-top-right-radius: 30px;
+    background: white;
+    padding: 4px 20px 4px 40px;
+    margin-left: -30px;
+    border-bottom-right-radius: 30px;
+  }
+</style>
 <body>
   <div id="main">
     <!-- <div class="header__bg__layer"></div> -->
@@ -41,7 +50,7 @@
         <!-- <div class="header__bg__layer"></div> -->
         <div class="header__body">
           <div class="header_logo">
-            <a href="/index.html"><img src="./assets/img/logo-svg.svg" /></a>
+            <a href="/index.html"><img src="./assets/img/logo/m8-logo-blue.png" /></a>
           </div>
 
           <div class="header__ham" onclick="toggleanimate()">
@@ -82,7 +91,7 @@
       <!-- landing page -->
 
       <section class="home__hero__wrap">
-        <div class="image__box" style="width: 50%; height:200px;background-color:rgba(255, 255, 255, 0)">
+        <div class="image__box" style="width: 50%; ;background-color:rgba(255, 255, 255, 0)">
           <img src="/assets/img/bgs/newAsset 1.svg">
         </div>
         <div class="home__hero__text" data-aos="fade-down-right">
