--- a/pages/projects.html
+++ b/pages/projects.html
@@ -90,7 +90,7 @@
           <h1>We have a robust team of developers and designers that deliver the best in class software for your business
             needs.</h1>
         </div>
-        <button>Get a quote
+        <button>GET A QUOTE
           <!-- <svg width="44" height="44" viewBox="0 0 44 44" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path
