--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
             <div class="item">
               <img src="/assets/img/blecyn-logo.png" />
             </div>
-
+            <div class="item">
+              <img src="/assets/img/cre8tive.png" />
+            </div>
           </div>
         </div>
       </div>
@@ -155,7 +157,9 @@
                   <div class="reverse_colors">
                     <h2>Build, Launch and Scale your next multi-billion dollar project: Everytime within budget and right
                       on time.</h2>
-                    <button>START BUILDING</button>
+                      <a href="/pages/projects.html">
+                        <button>START BUILDING</button>
+                      </a>
                   </div>
                 </div>
               </div>
@@ -173,7 +177,9 @@
                   <div class="reverse_colors">
                     <h2>Built so you could learn, practice, apply and scale fast. Whether you are a beginner,
                       intermediate or expert.</h2>
-                      <button>START LEARNING</button>
+                      <a href="www.academy.motiv8technologies.com">
+                        <button>START LEARNING</button>
+                      </a>
                   </div>
                 </div>
               </div>
@@ -191,7 +197,9 @@
                   <div class="reverse_colors">
                     <h2>Uninterrupted electricity, SuperFast internet connectivity, Printing Services and Tech Support at
                       your fingertips</h2>
-                      <button>LEARN MORE</button>
+                      <a href="/pages/hub.html">
+                        <button>LEARN MORE</button>
+                      </a>
                   </div>
                 </div>
               </div>
@@ -214,11 +222,11 @@
         <h2>Our Competitive Advantage</h2>
       </div>
       <div class="home__more__value__body">
-        <div class="home__more__value__hero" data-aos="fade-down">
+        <div class="home__more__value__hero" data-aos="fade-right">
           <img src="/assets/img/more-value.png" />
         </div>
 
-        <div class="home__more__value__content" data-aos="fade-down-right">
+        <div class="home__more__value__content" data-aos="fade-left">
           <h4>
             Our digital services and products can drive more value Into your
             business for growth and service delivery
@@ -244,6 +252,28 @@
         </div>
       </div>
     </section>
+
+        <!-- Rapid Production -->
+        <section class="__our__approach">
+          <div class="services__heading" data-aos="fade-up">
+            <h2>Our Approach</h2>
+          </div>
+            <div class="home__approach" data-aos="fade-up">
+              <h4>
+                We value you, so we listen to you first, that way we are able to put your best foot forward.
+              </h4>
+              <h4>
+                Our team of experts brainstorm to turn your unique idea into scaleable products
+              </h4>
+              <h4>
+                We work collaboratively with you in the prototyping and final phase to ensure we deliver only the best
+              </h4>
+            </div>
+          </div>
+        </section>
+
+
+
     <!-- Modal Background and Modal -->
     <div id="modal-background">
       <div id="modal">
