--- a/index.html
+++ b/index.html
@@ -247,11 +247,14 @@
     <!-- Modal Background and Modal -->
     <div id="modal-background">
       <div id="modal">
-        <span id="close-btn">&times;</span>
+        <span id="close-btn">
+          <!-- &times; -->
+
+        </span>
         <div class="request__us__header">
           <div>
-            <h2>Request a Service</h2>
-            <h4>Do you need an IT solution?</h4>
+            <h4>Request a Service</h2>
+            <h6>Do you need an IT solution?</h4>
           </div>
         </div>
         <form class="contact__form">
