--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <div id="modal-background">
       <div id="modal">
         <span id="close-btn">
-          <!-- &times; -->
+          &times;
 
         </span>
         <div class="request__us__header">
