--- a/pages/hub.html
+++ b/pages/hub.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="../assets/css/owl.carousel.min.css" />
   <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css" />
   <link rel="stylesheet" href="../assets/css/aos.css" />
+  <link type="text/css" href="../assets/css/responcive.css" rel="stylesheet" />
 
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -107,7 +108,7 @@
              </div>
       </section>
 
-      <section>
+      <section class="hub__pictures">
         <div class="row">
           <div class="large-12 columns">
             <div class="loop owl-carousel owl-theme" data-category="all">
