--- a/pages/hub.html
+++ b/pages/hub.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="../assets/css/owl.carousel.min.css" />
   <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css" />
   <link rel="stylesheet" href="../assets/css/aos.css" />
+  <link type="text/css" href="../assets/css/contact.css" rel="stylesheet" />
   <link type="text/css" href="../assets/css/responcive.css" rel="stylesheet" />
 
 
@@ -152,50 +153,52 @@
         </div>
       </section>  
 
-      <div id="modal-background">
-        <div id="modal">
-          <span id="close-btn">&times;</span>
-          <div class="request__us__header">
-            <div>
-              <h2>Request a Service</h2>
-              <h4>Do you need an IT solution?</h4>
-            </div>
+    <!-- Modal Background and Modal -->
+    <div id="modal-background">
+      <div id="modal">
+        <span id="close-btn">
+          &times;
+        </span>
+        <div class="request__us__header">
+          <div>
+            <h4>Request a Service</h2>
+            <h6>Do you need an IT solution?</h4>
           </div>
-          <form class="contact__form">
-            <div class="contact__form__input__wrap">
-              <i class="fa fa-user-o" aria-hidden="true"></i>
-              <input placeholder="Your Name" class="input" />
-            </div>
-            <div class="contact__form__input__wrap">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-              <input placeholder="Phone Number" class="input" />
-            </div>
-            <div class="contact__form__input__wrap">
-              <i class="fa fa-envelope-o" aria-hidden="true"></i>
-              <input placeholder="Email Address" type="email" class="input" />
-            </div>
-            <div class="contact__form__input__wrap">
-              <i class="fa fa-comment-o" aria-hidden="true"></i>
-              <textarea placeholder="Type your message here" class="input" rows="5"></textarea>
-            </div>
-            <button class="button">Submit</button>
-          </form>
-
         </div>
+        <form class="contact__form">
+          <div class="contact__form__input__wrap">
+            <i class="fa fa-user-o" aria-hidden="true"></i>
+            <input placeholder="Your Name" class="input" />
+          </div>
+          <div class="contact__form__input__wrap">
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <input placeholder="Phone Number" class="input" />
+          </div>
+          <div class="contact__form__input__wrap">
+            <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            <input placeholder="Email Address" type="email" class="input" />
+          </div>
+          <div class="contact__form__input__wrap">
+            <i class="fa fa-comment-o" aria-hidden="true"></i>
+            <textarea placeholder="Type your message here" class="input" rows="5"></textarea>
+          </div>
+          <button class="button">Submit</button>
+        </form>
       </div>
-      <div class="contact">
-        <a class="header__active" id="open-btn">
-          <button><svg width="60" height="60" viewBox="0 0 203 203" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path opacity="0.3"
-                d="M101.5 81.0305C76.5481 81.0305 55.2331 96.5093 46.521 118.332H156.479C152.095 107.33 144.513 97.895 134.713 91.2458C124.912 84.5965 113.343 81.0383 101.5 81.0305V81.0305Z"
-                fill="white" />
-              <path
-                d="M16.9165 143.792H186.083V160.708H16.9165V143.792ZM117.063 65.8904C118.157 63.3146 118.597 60.5083 118.343 57.7214C118.089 54.9345 117.15 52.2536 115.61 49.9175C114.069 47.5814 111.975 45.6627 109.513 44.3321C107.051 43.0016 104.298 42.3006 101.5 42.2916C98.7015 42.3006 95.9488 43.0016 93.4869 44.3321C91.0251 45.6627 88.9306 47.5814 87.3899 49.9175C85.8493 52.2536 84.9103 54.9345 84.6568 57.7214C84.4032 60.5083 84.8428 63.3146 85.9365 65.8904C52.8644 72.7416 27.6586 100.908 25.3748 135.333H177.625C175.341 100.908 150.135 72.7416 117.063 65.8904ZM101.5 81.0308C126.452 81.0308 147.767 96.5095 156.479 118.332H46.5207C50.9048 107.33 58.4867 97.8953 68.2872 91.2461C78.0877 84.5968 89.6566 81.0385 101.5 81.0308V81.0308Z"
-                fill="white" />
-            </svg>
-          </button>
-        </a>
-      </div>
+    </div>
+    <div class="contact">
+      <a class="header__active" id="open-btn">
+        <button><svg width="60" height="60" viewBox="0 0 203 203" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path opacity="0.3"
+              d="M101.5 81.0305C76.5481 81.0305 55.2331 96.5093 46.521 118.332H156.479C152.095 107.33 144.513 97.895 134.713 91.2458C124.912 84.5965 113.343 81.0383 101.5 81.0305V81.0305Z"
+              fill="white" />
+            <path
+              d="M16.9165 143.792H186.083V160.708H16.9165V143.792ZM117.063 65.8904C118.157 63.3146 118.597 60.5083 118.343 57.7214C118.089 54.9345 117.15 52.2536 115.61 49.9175C114.069 47.5814 111.975 45.6627 109.513 44.3321C107.051 43.0016 104.298 42.3006 101.5 42.2916C98.7015 42.3006 95.9488 43.0016 93.4869 44.3321C91.0251 45.6627 88.9306 47.5814 87.3899 49.9175C85.8493 52.2536 84.9103 54.9345 84.6568 57.7214C84.4032 60.5083 84.8428 63.3146 85.9365 65.8904C52.8644 72.7416 27.6586 100.908 25.3748 135.333H177.625C175.341 100.908 150.135 72.7416 117.063 65.8904ZM101.5 81.0308C126.452 81.0308 147.767 96.5095 156.479 118.332H46.5207C50.9048 107.33 58.4867 97.8953 68.2872 91.2461C78.0877 84.5968 89.6566 81.0385 101.5 81.0308V81.0308Z"
+              fill="white" />
+          </svg>
+        </button>
+      </a>
+    </div>
     </main>
 
     <footer class="footer">
