--- a/pages/about.html
+++ b/pages/about.html
@@ -170,46 +170,6 @@
       </section>
 
 
-      <!-- <section class="about__team__wrap">
-        <div class="about__team__text_wrap">
-          <h3 class="title__two">Our Great Team</h3>
-          <div class="title__two__border"></div>
-          <h4 style="color: black; font-weight: 100;">
-            Our team of specialists consistently delivers outstanding results
-            combining creative ideas with our vast experience. We can help you
-            with your various information technology services to put your
-            business online and make everyday business activities easier. we
-            offer services like website design, social media marketing, Ppc
-            marketing, Graphics design, Networking, and Cyber & Network
-            security
-          </h4>
-        </div>
-        <!-- <div class="about__illus_wrap">
-            <img src="../assets//img/about01.png" class="about__illus" />
-          </div> -->
-      </section>
-      <!-- <section>
-        <div class="about__team__list">
-          <img src="../assets//img/default-team.svg" />
-          <img src="../assets//img/default-team.svg" />
-          <img src="../assets//img/default-team.svg" />
-          <img src="../assets//img/default-team.svg" />
-        </div>
-      </section> -->
-      <!-- <section class="about__detail about__join__team__section">
-          <div class="about__join__our__team__layer"></div>
-          <div class="about__detail__body">
-            <h2 class="title__one">Join Our Team</h2>
-            <p class="team__desc">
-              We pursue relationships based on transparency, persistence, mutual
-              trust, and integrity with our employees, customers and other
-              business partners.
-            </p>
-            <button class="button">Talk to us</button>
-          </div>
-        </section> -->
-
-
       <!-- //contact starts Here’s -->
 
       <section class="contact" style="background-image: url(/assets/img/card__bg.png);">
@@ -239,7 +199,7 @@
               <a href="mailto:support@motiv8technologies.com">support@motiv8technologies.com</a>
             </div>
           </div>
-          <img src="/assets/img/m8-office.png" />
+          <img src="/assets/img/m8-office.png" /></div></div></section>
     </main>
 
     <!-- footer -->
