--- a/pages/post.html
+++ b/pages/post.html
@@ -20,44 +20,39 @@
       rel="stylesheet"
     />
     <script src="../assets/js/jquery.min.js"></script>
-    
-    <script
-      src="../assets/js/react.dev.js"
-      crossorigin
-    ></script>
-    <script
-      src="../assets/js/react-dom.dev.js"
-      crossorigin
-    ></script>
+
+    <script src="../assets/js/react.dev.js" crossorigin></script>
+    <script src="../assets/js/react-dom.dev.js" crossorigin></script>
     <script src="../assets/js/babel.min.js"></script>
     <script src="../assets/js/component/post.js" type="text/babel"></script>
   </head>
   <body>
     <div id="main">
       <!-- header -->
-      <header class="header ">
+      <header class="header">
         <style>
-          .header__nav > a{
+          .header__nav > a {
             color: #112791 !important;
-
-         }
-         .nav-bar {
-             background-color: #2100f8;
-         }
+          }
+          .nav-bar {
+            background-color: #2100f8;
+          }
         </style>
         <div class="h-regular"></div>
         <!-- <div class="header__bg__layer"></div> -->
-        <div class="header__body ">
+        <div class="header__body">
           <div class="header_logo">
-            <a href="/index.html"><img src="../assets/img/logo/m8-logo-blue.png" /></a>
+            <a href="/index.html"
+              ><img src="../assets/img/logo/m8-logo-blue.png"
+            /></a>
           </div>
-  
+
           <div class="header__ham" onclick="toggleanimate()">
             <div class="nav-bar"></div>
             <div class="nav-bar"></div>
             <div class="nav-bar"></div>
           </div>
-  
+
           <div class="header__nav">
             <a href="/index.html" class="header__active">
               <div>Home</div>
@@ -77,13 +72,22 @@
             <a href="/pages/about.html">
               <div>About</div>
             </a>
-            <div class="header__phone__number__wrap" style="padding: 4px 10px; background-color:#2100f8; color :blue ; border-radius:50px">
+            <div
+              class="header__phone__number__wrap"
+              style="
+                padding: 4px 10px;
+                background-color: #2100f8;
+                color: blue;
+                border-radius: 50px;
+              "
+            >
               <!-- <i class="fa fa-phone" aria-hidden="true"></i> -->
-              <a href="callto:+23470000668488" style="color :rgb(255, 255, 255)">0700 0066 8488</a>
+              <a href="callto:+23470000668488" style="color: rgb(255, 255, 255)"
+                >0700 0066 8488</a
+              >
             </div>
           </div>
         </div>
-  
       </header>
       <div class="back-drop" onclick="toggleanimate()"></div>
 
@@ -210,6 +214,5 @@
     </div>
   </body>
   <script language="javascript" src="../assets/js/hamnav.js"></script>
-<script src="../assets/js/custom.js"></script>
-
+  <script src="../assets/js/custom.js"></script>
 </html>
